fix(frontend): fix initial overlap in MasonryGrid

--- a/frontend/src/components/Common/MasonryGrid/MasonryGrid.css
+++ b/frontend/src/components/Common/MasonryGrid/MasonryGrid.css
@@ -5,3 +5,7 @@
   grid-auto-rows: 0;
   justify-content: center;
 }
+.item {
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+}
